Fixed buttons not working in dark mode

--- a/client/src/styles/dark-mode.scss
+++ b/client/src/styles/dark-mode.scss
@@ -62,9 +62,9 @@ body.dark {
 
   #country-details {
     button {
-      background-color: $dark-elements;
+      background-color: $dark-elements !important;
       color: $dark-text;
-      box-shadow: 1px 1px 4px 2px rgba(0%, 0%, 0%, 0.1);
+      box-shadow: 1px 1px 4px 2px rgba(0%, 0%, 0%, 0.1) !important;
     }
 
     div {
